<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Profile">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </com.google.android.material.appbar.AppBarLayout>

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_photo"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/dave"/>

        <TextView
                android:id="@+id/name"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_below="@+id/my_photo"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/line"
                style="?android:listSeparatorTextViewStyle"
                android:layout_below="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>


        <TextView
                android:id="@+id/track"
                android:layout_width="wrap_content"
                android:text="@string/track"
                android:layout_below="@+id/line"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:text="@string/country"
                android:layout_below="@+id/track"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/country"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/phone_num"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/phone_num"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/email"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/slack_username"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:text="@string/slack_username"
                android:layout_below="@+id/phone_num"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:layout_height="wrap_content"/>


</RelativeLayout>