<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:fontFamily="sans-serif-black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btn_1"
            android:text="@string/btn1_text"
            android:layout_marginTop="70dp"
            android:textSize="25dp"
            android:fontFamily="serif"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btn_2"
            android:text="@string/btn2_text"
            android:textSize="25dp"
            android:fontFamily="serif"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@android:color/holo_orange_light"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>